<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.cmpe277.onlinemilktea.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home"/>


    <fragment
        android:id="@+id/nav_menu"
        android:name="com.cmpe277.onlinemilktea.ui.menu.MenuFragment"
        android:label="@string/menu_menu"
        tools:layout="@layout/fragment_menu" />


    <fragment
        android:id="@+id/nav_food_list"
        android:name="com.cmpe277.onlinemilktea.ui.foodlist.FoodListFragment"
        android:label="@string/menu_food_list"
        tools:layout="@layout/fragment_food_list" />

    <fragment
        android:id="@+id/nav_food_detail"
        android:name="com.cmpe277.onlinemilktea.ui.fooddetail.FoodDetailFragment"
        android:label="@string/food_detail"
        tools:layout="@layout/fragment_food_detail" />

    <fragment
        android:id="@+id/view_order"
        android:name="com.cmpe277.onlinemilktea.ui.view_order.ViewOrderFragment"
        android:label="@string/menu_order"
        tools:layout="@layout/fragment_view_order" />

    <fragment
        android:id="@+id/map_view"
        android:name="com.cmpe277.onlinemilktea.ui.map.MapFragment"
        android:label="Map View"
        tools:layout="@layout/layout_map" />

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.cmpe277.onlinemilktea.ui.cart.CartFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_cart" />
</navigation>